2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/buildom.boot: Add '~=' to builtion domains.

2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot: Speed up 'newWordFrom'.

2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Use sbcl 'unix-mkdir'.

2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/format.boot, src/interp/i-eval.boot: Avoid
	error when printing error message (SF 2977357 ).

2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-spec1.boot: Better detection of types
	depending on local variables.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootfuns.lisp, src/interp/comp.lisp: Move
	content to src/interp/macros.lisp.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*.spad.pamphlet, src/interp/*.boot:
	Remove most of useless underscores.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/polycat.spad.pamphlet,
	src/algebra/poly.spad.pamphlet: Support polynomial
	rings over semirings.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/lisplib.boot: Close $compiler_output_stream.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/forttyp.spad.pamphlet,
	src/algebra/riccati.spad.pamphlet,
	src/interp/nrunfast.boot, src/interp/int-top.boot,
	src/interp/database.boot, src/interp/slam.boot,
	src/interp/nruncomp.boot, src/interp/i-map.boot,
	src/interp/rulesets.boot, src/interp/interop.boot,
	src/interp/c-util.boot, src/interp/setq.lisp,
	src/interp/ax.boot, src/interp/vmlisp.lisp:
	Misc cleanups.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/category.boot: Simpler and faster join.
	src/algebra/curve.spad.pamphlet: Adjust.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot: Skip documentation handling
	in bootstrap mode.

2011-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
